Corrects display of Account Settings inputs on mobile.

--- a/stylesheets/modules/my-account/account-settings.less
+++ b/stylesheets/modules/my-account/account-settings.less
@@ -28,6 +28,12 @@
     .mz-accountsettings-acceptsmarketing label {
         display: inline-block;
     }
+    .mz-accountsettings-lastname {
+        @media only screen and (max-width: 767px) {
+            display: block;
+            margin-top: 10px;
+        }
+    }
     .mz-accountsettings-acceptsmarketing {
         &.is-editing {
             margin-bottom: 20px;
